--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header div a:hover {
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: none;
+  background-color: #242429;
 }
 
 .cards {
@@ -42,8 +43,8 @@ body {
 }
 
 .card {
+  background-image: url("fundo_card.png");
   border-radius: 5px;
-  background-color: #282a36;
   height: 520px;
   width: 400px;
   text-align: center;
@@ -89,6 +90,11 @@ body {
   cursor: pointer;
 }
 
+.card_starter, .card_launchbase, .card_gostack {
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+}
+
 .cards .card_starter::before {
   border: solid 4px black;
 }
@@ -99,6 +105,7 @@ body {
   transition: all 0.3s ease 0s;
   margin: 4px -4px -4px -4px;
   box-shadow: 5px 10px 8px 10px rgba(0, 0, 0, 0.1);
+  background-color: #7159c1;
 }
 
 .card_launchbase:hover {
@@ -106,6 +113,7 @@ body {
   border-radius: 10px;
   transition: all 0.3s ease 0s;
   margin: 4px -4px -4px -4px;
+  background-color: #fd951f;
 }
 
 .card_launchbase:hover .card_price {
@@ -119,6 +127,7 @@ body {
   border-radius: 10px;
   transition: all 0.3s ease 0s;
   margin: 4px -4px -4px -4px;
+  background-color: #04d361;
 }
 
 .card_gostack:hover .card_price {
